# AdventOfCode

./: .gitignore  CMakeLists.txt  CommonBody.cmake  CommonHeader.cmake  Macros.cmake  README.md  day-init.py  dependencies.json
calendar/10_AdapterArray/: AdapterArraySolver.cpp  AdapterArraySolver.h  CMakeLists.txt
calendar/11_SeatingSystem/: CMakeLists.txt  SeatingSystemSolver.cpp  SeatingSystemSolver.h  main.cpp
calendar/12_RainRisk/: CMakeLists.txt  RainRiskSolver.cpp  RainRiskSolver.h  main.cpp
calendar/13_ShuttleSearch/: CMakeLists.txt  main.cpp
calendar/14_DockingData/: DockingDataSolver.cpp  DockingDataSolver.h  main.cpp
calendar/15_RambunctiousRecitation/: RambunctiousRecitationSolver.h
calendar/16_TicketTranslation/: CMakeLists.txt
calendar/17_ConwayCubes/: CMakeLists.txt
calendar/18_OperationOrder/: CMakeLists.txt  OperationOrderSolver.cpp
calendar/19_MonsterMessages/: CMakeLists.txt  MonsterMessagesSolver.h  main.cpp
calendar/1_ReportRepair/: CMakeLists.txt  ReportRepairSolver.h
calendar/2020/: CMakeLists.txt
calendar/2020/10_AdapterArray/: AdapterArraySolver.cpp  AdapterArraySolver.h  main.cpp
calendar/2020/11_SeatingSystem/: SeatingSystemSolver.cpp  main.cpp
calendar/2020/13_ShuttleSearch/: ShuttleSearchSolver.cpp  ShuttleSearchSolver.h
calendar/2020/14_DockingData/: CMakeLists.txt
calendar/2020/15_RambunctiousRecitation/: CMakeLists.txt  RambunctiousRecitationSolver.cpp  main.cpp
calendar/2020/16_TicketTranslation/: TicketTranslationSolver.cpp  TicketTranslationSolver.h  main.cpp
calendar/2020/17_ConwayCubes/: ConwayCubesSolver.cpp  ConwayCubesSolver.h  main.cpp
calendar/2020/18_OperationOrder/: OperationOrderSolver.h  main.cpp
calendar/2020/19_MonsterMessages/: MonsterMessagesSolver.cpp
calendar/2020/1_ReportRepair/: ReportRepairSolver.cpp  main.cpp
calendar/2020/20_JurassicJigsaw/src/: ImageMatcher.cpp  ImageMatcher.h  JurassicJigsaw.cpp  PatternSearcher.cpp  Problem.h  Tile.cpp
calendar/2020/2_PasswordPhilosophy/: PasswordPhilosophySolver.cpp
calendar/2020/3_TobogganTrajectory/: main.cpp
calendar/2020/4_PassportProcessing/: PassportProcessingSolver.cpp  PassportProcessingSolver.h
calendar/2020/5_BinaryBoarding/: BinaryBoardingSolver.cpp  CMakeLists.txt
calendar/2020/6_CustomCustoms/: CustomCustomsSolver.cpp  CustomCustomsSolver.h  main.cpp
calendar/2020/7_HandyHaversacks/: CMakeLists.txt  HandyHaversacksSolver.cpp  main.cpp
calendar/2020/9_EncodingError/: CMakeLists.txt  EncodingErrorSolver.cpp  main.cpp
calendar/2020/tests/: CMakeLists.txt  catch2_main.cpp
calendar/2021/: CMakeLists.txt
calendar/2021/10_SyntaxScoring/: CMakeLists.txt  SyntaxScoringSolver.cpp  SyntaxScoringSolver.h  main.cpp
calendar/2021/11_DumboOctopus/: CMakeLists.txt  DumboOctopusSolver.cpp  DumboOctopusSolver.h  main.cpp
calendar/2021/12_PassagePathing/: CMakeLists.txt  PassagePathingSolver.cpp  PassagePathingSolver.h  main.cpp
calendar/2021/13_TransparentOrigami/: CMakeLists.txt  TransparentOrigamiSolver.cpp  TransparentOrigamiSolver.h  main.cpp
calendar/2021/1_SonarSweep/: CMakeLists.txt  SonarSweepSolver.cpp  SonarSweepSolver.h  main.cpp
calendar/2021/2_Dive/: CMakeLists.txt  DiveSolver.cpp  DiveSolver.h  main.cpp
calendar/2021/3_BinaryDiagnostic/: BinaryDiagnosticSolver.cpp  BinaryDiagnosticSolver.h  CMakeLists.txt  main.cpp
calendar/2021/4_GiantSquid/: CMakeLists.txt  GiantSquidSolver.cpp  GiantSquidSolver.h  main.cpp
calendar/2021/5_HydrothermalVenture/: CMakeLists.txt  HydrothermalVentureSolver.cpp  HydrothermalVentureSolver.h  main.cpp
calendar/2021/6_Lanternfish/: CMakeLists.txt  LanternfishSolver.cpp  LanternfishSolver.h  main.cpp
calendar/2021/7_TreacheryOfWhales/: CMakeLists.txt  TreacheryOfWhalesSolver.cpp  TreacheryOfWhalesSolver.h  main.cpp
calendar/2021/8_SevenSegmentSearch/: CMakeLists.txt  SevenSegmentSearchSolver.cpp  SevenSegmentSearchSolver.h  main.cpp
calendar/2021/9_SmokeBasin/: CMakeLists.txt  SmokeBasinSolver.cpp  SmokeBasinSolver.h  main.cpp
calendar/20_JurassicJigsaw/: CMakeLists.txt
calendar/20_JurassicJigsaw/src/: Image.cpp  Image.h  JurassicJigsaw.h  Parser.cpp  Parser.h  PatternSearcher.h  Problem.cpp  Solver.cpp  Solver.h  Tile.h  main.cpp
calendar/2_PasswordPhilosophy/: CMakeLists.txt  PasswordPhilosophySolver.h  main.cpp
calendar/3_TobogganTrajectory/: CMakeLists.txt  TobogganTrajectorySolver.cpp  TobogganTrajectorySolver.h
calendar/4_PassportProcessing/: CMakeLists.txt  main.cpp
calendar/5_BinaryBoarding/: BinaryBoardingSolver.h  main.cpp
calendar/6_CustomCustoms/: CMakeLists.txt  CustomCustomsSolver.cpp
calendar/7_HandyHaversacks/: HandyHaversacksSolver.h
calendar/8_HandheldHalting/: CMakeLists.txt  HandheldHaltingSolver.cpp  HandheldHaltingSolver.h  main.cpp
calendar/9_EncodingError/: EncodingErrorSolver.h
helpers/: CMakeLists.txt
helpers/include/: CommonHelpers.h  ProblemSolver.h  SimpleControllableView.h
helpers/src/: CommonHelpers.cpp  SimpleControllableView.cpp
template/: CMakeLists.txt  TemplateSolver.cpp  TemplateSolver.h  main.cpp
tests/: CMakeLists.txt  catch2_main.cpp
